--- Auto-Git Commit ---

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -2,8 +2,7 @@
   template: 
     src: prometheus.yml
     dest: /opt/prometheus/prometheus.yml
-
--
+loop
   
 - name: Restart Prometheus Service
   systemd:
