--- Auto-Git Commit ---

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -2,7 +2,8 @@
   template: 
     src: prometheus.yml
     dest: /opt/prometheus/prometheus.yml
-loop
+loop:
+  
   
 - name: Restart Prometheus Service
   systemd:
