--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Update Prometheus Config
   template: 
     src: {{item}}.yml
-    dest: /opt/prometheus/.yml
+    dest: /opt/prometheus/{{item}}.yml
   loop:
     - prometheus
     - alerts
