--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -2,7 +2,7 @@ groups:
 - name: HardwareResources
   rules:
   - alert: HighCPU
-    expr: job:request_latency_seconds:mean5m{job="myjob"} > 0.5
+    expr: CPU_
     for: 10m
     labels:
       severity: page
