--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -2,7 +2,7 @@ groups:
 - name: HardwareResources
   rules:
   - alert: HighCPU
-    expr: CPU_usage_in_percent
+    expr: CPU_usage_in_percentage > 90
     for: 10m
     labels:
       severity: page
