--- Auto-Git Commit ---

--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -7,4 +7,4 @@ groups:
     labels:
       severity: critical
     annotations:
-      summary: HighCPU on {%raw%}{{ $labeles.tagName }}
+      summary: HighCPU on {%raw%}{{ $labeles.tagName }}{%%}
