--- Auto-Git Commit ---

--- a/roles/prometheus/templates/records.yml
+++ b/roles/prometheus/templates/records.yml
@@ -1,5 +1,5 @@
 groups:
   - name: example
     rules:
-      - records: cpu_usage_in_percentage
+      - record: cpu_usage_in_percentage
         expr: 100 - (rate(node_cpu_seconds_total{mode="idle"}[1m]) * 100)
