--- Auto-Git Commit ---

--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -13,3 +13,17 @@
     state: restarted
     enabled: yes
 
+- name:  Config
+  template: 
+    src: "{{item}}.yml"
+    dest: /opt/prometheus/{{item}}.yml
+  loop:
+    - prometheus
+    - alerts
+    - records
+  
+- name: Restart Prometheus Service
+  systemd:
+    name: prometheus
+    state: restarted
+    enabled: yes
