--- Auto-Git Commit ---

--- a/roles/prometheus/templates/alert-manager.yml
+++ b/roles/prometheus/templates/alert-manager.yml
@@ -8,7 +8,7 @@ route:
   - name: email
     email_configs:
       - to: venkatpulivarthi88@gmail.com
-        from: raghudevopsb58@gmail.com
+        from: venkatpulivarthi88@gmail.com
         smarthost: email-smtp.us-east-1.amazonaws.com:587
         auth_username: AKIAZHEF5S5CLWR7EGOC
         auth_password: BPQPL84bzkqGAzfcW50NbOOK2St/b4VXabPbrGawb87t
