--- a/roles/prometheus/templates/alert-manager.yml
+++ b/roles/prometheus/templates/alert-manager.yml
@@ -3,7 +3,7 @@ route:
   group_wait: 30s
   group_interval: 5m
   repeat_interval: 1h
-  receiver: 'web.hook'
+  receiver: ''
   receivers:
   - name: email
     email_configs:
