--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -42,7 +42,7 @@ scrape_configs:
           - '__meta_ec2_tag_Name'
         target_label:  'tagName'
 #   static_configs:
-      - targets:
+#      - targets:
           - "172.31.87.10:9100"
 
    
