--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -3,7 +3,7 @@ groups:
   rules:
   - alert: HighCPU
     expr: CPU_usage_in_percentage > 80
-    for: 11s
+    for: 1m
     labels:
       severity: critical
     annotations:
