--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,25 +1,25 @@
 - name: Update Prometheus Config
-  template: 
+  template:
     src: "{{item}}.yml"
     dest: /opt/prometheus/{{item}}.yml
   loop:
     - prometheus
     - alerts
     - records
-  
+
 - name: Restart Prometheus Service
   systemd:
     name: prometheus
     state: restarted
     enabled: yes
 
-- name: AlertManager Config
-  template: 
+- name: Update AlertManager Config
+  template:
     src: "{{item}}.yml"
     dest: /opt/alertmanager/{{item}}.yml
   loop:
-    - alert-manager
-  
+    - alertmanager
+
 - name: Restart AlertManager Service
   systemd:
     name: alertmanager
