--- Auto-Git Commit ---

--- a/roboshop.yml
+++ b/roboshop.yml
@@ -68,3 +68,9 @@
   roles:
     - payment
 
+- name: Pull
+  hosts: localhost
+  become: yes
+  roles:
+    - role: "{{ROLE}}"
+      when: ROLE is defined
