--- Auto-Git Commit ---

--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,67 +1,67 @@
-- name: RoboShop Project setup - Frontend
+- name: RoboShop Project Setup - Frontend
   hosts: FRONTEND
   tags: frontend
   become: yes
   roles:
     - frontend
 
-- name: RoboShop Project setup - MongoDB
+- name: RoboShop Project Setup - MongoDB
   hosts: MONGODB
   tags: mongodb
   become: yes
   roles:
     - mongodb
 
-- name: RoboShop Project setup - Catalogue
+- name: RoboShop Project Setup - Catalogue
   hosts: CATALOGUE
   tags: catalogue
   become: yes
   roles:
     - catalogue
 
-- name: RoboShop Project setup - Redis
+- name: RoboShop Project Setup - Redis
   hosts: REDIS
   tags: redis
   become: yes
   roles:
     - redis
 
-- name: RoboShop Project setup - User
+- name: RoboShop Project Setup - User
   hosts: USER
   tags: user
   become: yes
   roles:
     - user
 
-- name: RoboShop Project setup - Cart
+- name: RoboShop Project Setup - Cart
   hosts: CART
   tags: cart
   become: yes
   roles:
     - cart
 
-- name: RoboShop Project setup - MySQL
+- name: RoboShop Project Setup - MySQL
   hosts: MYSQL
   tags: mysql
   become: yes
   roles:
     - mysql
 
-- name: RoboShop Project setup - Shipping
+- name: RoboShop Project Setup - Shipping
   hosts: SHIPPING
   tags: shipping
   become: yes
   roles:
     - shipping
 
-- name: RoboShop Project setup - RabbitMQ
+- name: RoboShop Project Setup - RabbitMQ
   hosts: RABBITMQ
   tags: rabbitmq
   become: yes
   roles:
     - rabbitmq
 
-- name: RoboShop Project setup - Payment
+- name: RoboShop Project Setup - Payment
   hosts: PAYMENT
   tags: payment
   become: yes
