--- Auto-Git Commit ---

--- a/roles/prometheus/templates/alertmanager.yml
+++ b/roles/prometheus/templates/alertmanager.yml
@@ -10,7 +10,7 @@ route:
       - to: venkatpulivarthi88@gmail.com
         from: venkatpulivarthi88@gmail.com
         smarthost: email-smtp.us-east-1.amazonaws.com:587
-        auth_username: 
+        auth_username: AKIA26BT3A3NQBU4IH5P
         auth_password: 
         require_tls: yes
 receivers:
