--- Auto-Git Commit ---

--- a/roles/prometheus/templates/alertmanager.yml
+++ b/roles/prometheus/templates/alertmanager.yml
@@ -11,7 +11,7 @@ route:
         from: venkatpulivarthi88@gmail.com
         smarthost: email-smtp.us-east-1.amazonaws.com:587
         auth_username: AKIA26BT3A3NQBU4IH5P
-        auth_password: 
+        auth_password: BHbdTLB4nF1H2UoVtiJROAO5YFd14RYAnns/mXPrxj5V
         require_tls: yes
 receivers:
 - name: 'web.hook'
