--- Auto-Git Commit ---

--- a/roles/prometheus/templates/alertmanager.yml
+++ b/roles/prometheus/templates/alertmanager.yml
@@ -10,7 +10,7 @@ route:
       - to: venkatpulivarthi88@gmail.com
         from: venkatpulivarthi88@gmail.com
         smarthost: email-smtp.us-east-1.amazonaws.com:587
-        auth_username: AKIA26BT3A3N4OFLWSNT
+        auth_username: 
         auth_password: BHbdTLB4nF1H2UoVtiJROAO5YFd14RYAnns/mXPrxj5V
         require_tls: yes
 receivers:
