--- a/roles/prometheus/templates/alertmanager.yml
+++ b/roles/prometheus/templates/alertmanager.yml
@@ -5,7 +5,7 @@ route:
   repeat_interval: 1h
   receiver: 'email'
   receivers:
-  - name: email
+  - name: emaill
     email_configs:
       - to: venkatpulivarthi88@gmail.com
         from: venkatpulivarthi88@gmail.com
