--- a/roles/prometheus/templates/alerts.yml
+++ b/roles/prometheus/templates/alerts.yml
@@ -2,7 +2,7 @@ groups:
 - name: HardwareResources
   rules:
   - alert: HighCPU
-    expr: CPU_usage_in_percentage > 90
+    expr: CPU_usage_in_percentage > 
     for: 1m
     labels:
       severity: critical
