--- a/roles/logstash/tasks/main.yml
+++ b/roles/logstash/tasks/main.yml
@@ -3,7 +3,24 @@
     src: logstash.conf
     dest: /etc/logstash/conf.d/logstash.conf
 
-- name: Restart Logstash
+- name: Stop Logstash
   systemd:
     name: logstash
-    state: restarted
+    state: stoped
+
+- name: Wait for port 5044 to be stopped
+  wait_for: 
+    port: 5044
+    delay: 15
+    state: stopped
+
+- name: Start Logstash
+  systemd:
+    name: logstash
+    state: started
+
+- name: Wait for port 5044 to be opned
+  wait_for: 
+    port: 5044
+    delay: 15
+    state: started
