--- a/roles/logstash/tasks/main.yml
+++ b/roles/logstash/tasks/main.yml
@@ -6,7 +6,7 @@
 - name: Stop Logstash
   systemd:
     name: logstash
-    state: stoped
+    state: stopped
 
 - name: Wait for port 5044 to be stopped
   wait_for: 
