--- a/roles/logstash/tasks/main.yml
+++ b/roles/logstash/tasks/main.yml
@@ -19,7 +19,7 @@
     name: logstash
     state: started
 
-- name: Wait for port 5044 to be opned
+- name: Wait for port 5044 to be opened
   wait_for: 
     port: 5044
     delay: 15
