--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -4,6 +4,12 @@ input {
   }
 }
 
+filter {
+      grok {]
+        match => { "message" => "%{IPV4}%{SPACE}-%{SPACE}-%{SPACE}\]%{SPACE}\"%{WORD}%{SPACE}%{PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT}%{SPACE}%{INT}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}" }
+      }
+    }
+
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
