--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -3,7 +3,11 @@ input {
     port => 5044
   }
 }
-
+filter {
+      grok {]
+        match => { "message" => "%{IPV4}%{SPACE}-%{SPACE}-%{SPACE}\]%{SPACE}\"%{WORD}%{SPACE}%{PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT}%{SPACE}%{INT}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}" }
+      }
+    }
 
 output {
   elasticsearch {
