--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -5,7 +5,7 @@ input {
 }
 filter {
       grok {]
-        match => { "message" => "%{IPV4}%{SPACE}-%{SPACE}-%{SPACE}\[%HTTPDATE\]%{SPACE}\"%{WORD}%{SPACE}%{PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT}%{SPACE}%{INT}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}" }
+        match => { "message" => "%{IPV4}%{SPACE}-%{SPACE}-%{SPACE}\[%HTTPDATE}\]%{SPACE}\"%{WORD}%{SPACE}%{PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT}%{SPACE}%{INT}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}" }
       }
     }
 
