--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -3,11 +3,12 @@ input {
     port => 5044
   }
 }
+
 filter {
-      grok {]
-        match => { "message" => "%{IPV4}%{SPACE}-%{SPACE}-%{SPACE}\[%{HTTPDATE}\]%{SPACE}\"%{WORD}%{SPACE}%{PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT}%{SPACE}%{INT}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}%{SPACE}%{QUOTEDSTRING}" }
-      }
-    }
+  grok {
+    match => { "message" => "%{IP:CLIENT_IP}%{SPACE}-%{SPACE}-%{SPACE}\[%{HTTPDATE}\]%{SPACE}\"%{WORD:HTTP_METHOD}%{SPACE}%{PATH:HTTP_URL_PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT:HTTP_RESPONSE_CODE:int}%{SPACE}%{INT:HTTP_REPONSE_SIZE:int}%{SPACE}%{QUOTEDSTRING:HTTP_URL}%{SPACE}%{QUOTEDSTRING:CLIENT}%{SPACE}%{QUOTEDSTRING}" }
+  }
+}
 
 output {
   elasticsearch {
