--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -1,7 +1,7 @@
 - name: Setup rsyslog
   template:
     src: rsyslog.conf
-    dest: /etc/
+    dest: /etc/rsyslog
 - name: Install NodeJS
   yum:
     name:
