--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -4,7 +4,8 @@
     dest: /etc/rsyslog.d/roboshop.conf
 
 - name: Restart Rsyslog
-  systemd
+  systemd: 
+    name: 
 - name: Install NodeJS
   yum:
     name:
