--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -1,11 +1,12 @@
-- name: Setup rsyslog
+- name: Setup rsystateslog
   template:
     src: rsyslog.conf
     dest: /etc/rsyslog.d/roboshop.conf
 
 - name: Restart Rsyslog
   systemd: 
-    name: 
+    name: rsyslog
+    
 - name: Install NodeJS
   yum:
     name:
