--- a/roles/common/templates/rsyslog.conf
+++ b/roles/common/templates/rsyslog.conf
@@ -1,4 +1,4 @@
-#template(name="OnlyMsg" type="string" string="%msg:::drop-last-lf%\n")
+template(name="OnlyMsg" type="string" string="%msg:::drop-last-lf%\n")
 
 if( $programname == '{{COMPONENT}}') then {
 action(type="omfile" file="/var/log/{{COMPONENT}}.log" template="OnlyMsg")
