--- a/roles/common/tasks/filebeat.yml
+++ b/roles/common/tasks/filebeat.yml
@@ -1,4 +1,4 @@
-- name: Import a key from 
+- name: Import FILE
   ansible.builtin.rpm_key:
     state: present
     key: http://apt.sw.be/RPM-GPG-KEY.dag.txt
