--- a/roles/common/tasks/filebeat.yml
+++ b/roles/common/tasks/filebeat.yml
@@ -1,4 +1,4 @@
 - name: Import Filebeat RPM Key
   ansible.builtin.rpm_key:
     state: present
-    key: https://packages.elastic.co
+    key: https://packages.elastic.co/GPG
