--- a/roles/common/tasks/filebeat.yml
+++ b/roles/common/tasks/filebeat.yml
@@ -1,4 +1,5 @@
 - name: Import Filebeat RPM Key
   ansible.builtin.rpm_key:
     state: present
-    key: https://packages.elastic.co/GPG-KEY-
+    key: https://packages.elastic.co/GPG-KEY-elasticsearch
+    
