--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
  - type: log
    enabled: true
    paths:
-    - /var/log/{{}}
+    - /var/log/{{COMPONENT}}.log
     #- c:\programdata\elasticsearch\logs\*
 
   # Exclude lines. A list of regular expressions to match. It drops the lines that are
