--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -1,6 +1,7 @@
 filebeat.inputs:
  - type: log
    enabled: true
+   json
    paths:
     - /var/log/{{COMPONENT}}
     #- c:\programdata\elasticsearch\logs\*
