--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -7,7 +7,7 @@ filebeat.inputs:
   
 filebeat.config.modules:
   path: ${path.config}/modules.d/*.yml
-  
+  reload
 
   # Set to true to enable config reloading
   reload.enabled: false
