--- Auto-Git Commit ---

--- a/roles/common/tasks/filebeat.yml
+++ b/roles/common/tasks/filebeat.yml
@@ -13,6 +13,11 @@
     name: filebeat
     state: installed
 
+- name: Update Filebeat Configuration
+  template:
+    src: filebeat.yml
+    dest: /etc/filebeat/filebeat.yml
+
 - name: Start Filebeat service
   systemd:
     name: filebeat
