--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -3,9 +3,9 @@
     - type: log
     enabled: true
     paths:
-{% if NGINX is defined %}
+#{% if NGINX is defined %}
       - /var/log/nginx/access.log
-{% else %}
+ {% else %}
       - /var/log/{{COMPONENT}}.log
 {% endif %}
 
