--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -5,9 +5,9 @@
     paths:
 #{% if NGINX is defined %}
       - /var/log/nginx/access.log
- {% else %}
+ #{% else %}
       - /var/log/{{COMPONENT}}.log
-{% endif %}
+#{% endif %}
 
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
