--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -5,6 +5,8 @@ filebeat.inputs:
     paths:
       - /var/log/{{COMPONENT}}.log
 
+set
+
 output.elasticsearch:
   hosts: ["elasticsearch.roboshop.internal:9200"]
 
