--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -5,7 +5,7 @@ filebeat.inputs:
     paths:
       - /var/log/{{COMPONENT}}.log
 
-set.up.te
+setup.template.name: 
 
 output.elasticsearch:
   hosts: ["elasticsearch.roboshop.internal:9200"]
