--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -6,7 +6,7 @@ filebeat.inputs:
       - /var/log/{{COMPONENT}}.log
 
 setup.template.name: "{{COMPONENT}}"
-setip.template.pattern: 
+setip.template.pattern: "{{COMPON}}"
 
 output.elasticsearch:
   hosts: ["elasticsearch.roboshop.internal:9200"]
