--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -10,7 +10,7 @@ setup.template.pattern: "{{COMPONENT}}-*"
 setup.ilm.enabled: false
 
 output.elasticsearch:
-  hosts: ["elasticsearch.roboshop.internal:9200"]
+  hosts: ["elasticsearch.roboshop.internal:9200"] elasticsearch.ro
   index: "{{COMPONENT}}-%{+yyyy.MM.dd}"
 
 ### Default Configuration
