--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -36,4 +36,9 @@
   include_role:
     name: common
     tasks_from: node-exporter
+
+  - name: Include Node_exporter
+  include_role:
+    name: common
+    tasks_from: node-exporter
     
