--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -37,7 +37,7 @@
     name: common
     tasks_from: node-exporter
 
-- name: Include Node_exporter
+- name: Include 
   include_role:
     name: common
     tasks_from: node-exporter
