--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -9,8 +9,8 @@ filebeat.inputs:
 
 setup.template.name: "{{COMPONENT}}"
 setup.template.pattern: "{{COMPONENT}}-*"
-setup.ilm.enabled: false%
-  { }
+setup.ilm.enabled: false
+  {%  }
 
 output.{{OUTPUT_TO}}:
   hosts: ["elasticsearch.roboshop.internal:9200"]
