--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -10,7 +10,7 @@ filebeat.inputs:
 setup.template.name: "{{COMPONENT}}"
 setup.template.pattern: "{{COMPONENT}}-*"
 setup.ilm.enabled: false
-  {%  }
+  {% endif % }
 
 output.{{OUTPUT_TO}}:
   hosts: ["elasticsearch.roboshop.internal:9200"]
