--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -18,7 +18,7 @@ output.elasticsearch:
 
 {% if OUTPUT_TO == "logstash" %}
 output.logstash:
-  hosts: ["elasticsearch.roboshop.internal:9200"]
+  hosts: ["elasticsearch.roboshop.internal:"]
   {% endif %}
 
 ### Default Configuration
