--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -3,7 +3,7 @@ filebeat.inputs:
     enabled: true
     json.keys_under_root: true
     paths:
-{% if NGIN%}
+{% if NGINX %}
       - /var/log/{{COMPONENT}}.log
 
 {% if OUTPUT_TO == "elasticsearch" %}
