--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -8,6 +8,7 @@ filebeat.inputs:
 {% else %}
 
 {% if OUTPUT_TO == "elasticsearch" %}
+      - /var/log/{{COMPONENT}}.log
 setup.template.name: "{{COMPONENT}}"
 setup.template.pattern: "{{COMPONENT}}-*"
 setup.ilm.enabled: false
