--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -4,7 +4,7 @@ filebeat.inputs:
     json.keys_under_root: true
     paths:
 {% if NGINX %}
-      - /var/log/{{COMPONENT}}.log
+      - /var/log/.log
 {% else %}
       - /var/log/{{COMPONENT}}.log
 {% if OUTPUT_TO == "elasticsearch" %}
