--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -13,6 +13,6 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "frontend-%
+    index => "frontend-%{+yyyy}
   }
 }
