--- a/roles/logstash/tasks/main.yml
+++ b/roles/logstash/tasks/main.yml
@@ -1,5 +1,5 @@
-- name: Copy Logstash Config
-  copy: 
+- name: COpy Logstash Config
+  copy:
     src: logstash.conf
     dest: /etc/logstash/conf.d/logstash.conf
 
@@ -8,8 +8,8 @@
     name: logstash
     state: stopped
 
-- name: Wait for port 5044 to be stopped
-  wait_for: 
+- name: Waits for port 5044 to be stopped
+  wait_for:
     port: 5044
     delay: 15
     state: stopped
@@ -19,8 +19,9 @@
     name: logstash
     state: started
 
-- name: Wait for port 5044 to be opened
-  wait_for: 
+- name: Waits for port 5044 to be opened
+  wait_for:
     port: 5044
     delay: 15
     state: started
+    timeout: 180
