--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -4,7 +4,7 @@
     dest: /etc/rsyslog.d/roboshop.conf
 
 - name: Restart Rsyslog
-  systemd: 
+  systemd:
     name: rsyslog
     state: restarted
 
@@ -18,6 +18,8 @@
 
 - name:  Download
   include_tasks: download.yml
+  vars:
+    APP_PATH: /home/roboshop/{{COMPONENT}}
 
 - name: Install NodeJS Dependencies
   community.general.npm:
@@ -32,5 +34,5 @@
 
 - name: Filebeat Setup
   include_tasks: filebeat.yml
-  vars: 
+  vars:
     OUTPUT_TO: elasticsearch
