--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -1,7 +1,8 @@
 filebeat.inputs:
   - type: log
     enabled: true
-    
+    fields:
+      appname
     paths:
 {% if NGINX is defined %}
       - /var/log/nginx/access.log
