--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
   - type: log
     enabled: true
     fields:
-      appname
+      appname: {{COMPONENT}}
     paths:
 {% if NGINX is defined %}
       - /var/log/nginx/access.log
