--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -15,6 +15,6 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[fields][appname]}-%{+yyyy.MM.dd}"
+    index => "%{[fields][appName]}-%{+yyyy.MM.dd}"
   }
 }
