--- Auto-Git Commit ---

--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -1,3 +1,13 @@
+- name: Setup rsyslog
+  template:
+    src: rsyslog.conf
+    dest: /etc/rsyslog.d/roboshop.conf
+
+- name: Restart Rsyslog
+  systemd:
+    name: rsyslog
+    state: restarted
+
 - name: Install Maven Package
   yum:
     name: maven
