--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -9,7 +9,8 @@ filter {
       grok {
         match => { "message" => "%{IP:CLIENT_IP}%{SPACE}-%{SPACE}-%{SPACE}\[%{HTTPDATE:HTTP_TIME}\]%{SPACE}\"%{WORD:HTTP_METHOD}%{SPACE}%{PATH:HTTP_URL_PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT:HTTP_RESPONSE_CODE:int}%{SPACE}%{INT:HTTP_REPONSE_SIZE:int}%{SPACE}%{QUOTEDSTRING:HTTP_URL}%{SPACE}%{QUOTEDSTRING:CLIENT}%{SPACE}%{QUOTEDSTRING}" }
       }
-  if [fields][appName] == "shipping" 
+  if [fields][appName] == "shipping" {
+    
 }
 
 output {
