--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -11,7 +11,7 @@ filter {
       }
   if [fields][appName] == "shipping" {
       grock {
-        match => { "message" }
+        match => { "message" => ""}
   }
 }
 
