--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -19,6 +19,6 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "-%{+yyyy.MM.dd}"
+    index => "{[-%{+yyyy.MM.dd}"
   }
 }
