--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -19,6 +19,6 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "{[fields][app-%{+yyyy.MM.dd}"
+    index => "{[fields][appName]}-%{+yyyy.MM.dd}"
   }
 }
