--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -22,3 +22,10 @@ output {
     index => "{[fields][appName]}-%{+yyyy.MM.dd}"
   }
 }
+
+output {
+  elasticsearch {
+    hosts => ["http://localhost:9200"]
+    index => "{[fields][appName]}-%{+yyyy.MM.dd}"
+  }
+}
