--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -19,7 +19,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "{[fields][appName]}-%{+yyyy.MM.dd}"
+    index => "frontend-%{+yyyy.MM.dd}"
   }
 }
 
