--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -26,6 +26,6 @@ output {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "{[fields][appName]}-%{+yyyy.MM.dd}"
+    index => "shipping-%{+yyyy.MM.dd}"
   }
 }
