--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -19,13 +19,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "frontend-%{+yyyy.MM.dd}"
+    index => "-%{+yyyy.MM.dd}"
   }
 }
 
-output {
-  elasticsearch {
-    hosts => ["http://localhost:9200"]
-    index => "shipping-%{+yyyy.MM.dd}"
-  }
-}
