--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -19,7 +19,8 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[fields][appName]}-%{+yyyy.MM.dd}"
+    index => "  }
+-%{+yyyy.MM.dd}"
   }
 }
 
