--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -19,8 +19,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "  }
--%{+yyyy.MM.dd}"
+    index => "%{[fields][appName]}-%{+yyyy.MM.dd}"
   }
 }
 
