--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -6,11 +6,11 @@ input {
 
 filter {
   if [fields][appName] == "frontend" {
-      grock {
+      grok {
         match => { "message" => "%{IP:CLIENT_IP}%{SPACE}-%{SPACE}-%{SPACE}\[%{HTTPDATE:HTTP_TIME}\]%{SPACE}\"%{WORD:HTTP_METHOD}%{SPACE}%{PATH:HTTP_URL_PATH}%{SPACE}%{WORD}/%{NUMBER}\"%{SPACE}%{INT:HTTP_RESPONSE_CODE:int}%{SPACE}%{INT:HTTP_REPONSE_SIZE:int}%{SPACE}%{QUOTEDSTRING:HTTP_URL}%{SPACE}%{QUOTEDSTRING:CLIENT}%{SPACE}%{QUOTEDSTRING}" }
       }
   if [fields][appName] == "shipping" {
-      grock {
+      grok {
         match => { "message" => "%{TIMESTAMP_ISO8601}%{SPACE}%{WORD:LOG_LEVEL}%{SPACE}%{INT:PID}%{SPACE}---%{SPACE}\[%{SPACE}%{WORD:MAIN_CLASS}\]%{SPACE}%{JAVACLASS:CLASS_NAME}%{SPACE}:%{GREEDYDATA:LOG_MESSAGE}" }
       } 
   }
