--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -10,7 +10,7 @@ filebeat.inputs:
   - /var/log/{{COMPONENT}}.log
 {% endif %}
 
-{% if JAVA is }
+{% if JAVA is defined %}
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
 setup.template.name: "{{COMPONENT}}"
