--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -11,7 +11,7 @@ filebeat.inputs:
 {% endif %}
 
 {% if JAVA is defined %}
-    multiline.
+    multiline.pattern: 
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
 setup.template.name: "{{COMPONENT}}"
