--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -11,7 +11,8 @@ filebeat.inputs:
 {% endif %}
 
 {% if JAVA is defined %}
-    multiline.pattern: "^[0-9][0-9][0-9][0-9]"
+    multiline.pattern: "^[0-9][0-9][0-9][0-9]-"
+
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
 setup.template.name: "{{COMPONENT}}"
