--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -12,7 +12,7 @@ filebeat.inputs:
 
 {% if JAVA is defined %}
     multiline.pattern: "^[0-9][0-9][0-9][0-9]-"
-    multiline.na
+    multiline.negate: true
 { % endif & }
 
 
