--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -13,6 +13,7 @@ filebeat.inputs:
 {% if JAVA is defined %}
     multiline.pattern: "^[0-9][0-9][0-9][0-9]-"
     multiline.negate: true
+    multiline.negate: true
 { % endif & }
 
 
