--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -5,17 +5,16 @@ filebeat.inputs:
       appName: {{COMPONENT}}
     paths:
 {% if NGINX is defined %}
-  - /var/log/nginx/access.log
+      - /var/log/nginx/access.log
 {% else %}
-  - /var/log/{{COMPONENT}}.log
+      - /var/log/{{COMPONENT}}.log
 {% endif %}
 
 {% if JAVA is defined %}
     multiline.pattern: "^[0-9][0-9][0-9][0-9]-"
     multiline.negate: true
     multiline.match: after
-{ % endif & }
-
+{% endif %}
 
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
