--- Auto-Git Commit ---

--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -1,4 +1,12 @@
+- name: Setup rsyslog
+  template:
+    src: rsyslog.conf
+    dest: /etc/rsyslog.d/roboshop.conf
 
+- name: Restart Rsyslog
+  systemd:
+    name: rsyslog
+    state: restarted
 
 - name: Install Python
   yum:
