--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -17,7 +17,9 @@ filter {
       } 
   }
 
-  
+if [fields][appName] == "shipping" {
+      grok {
+        match => { "message" => "
 }
 
 output {
