--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -17,7 +17,7 @@ filter {
       } 
   }
 
-  if [fields][appName] == "shipping" {
+  if [fields][appName] == "payment" {
       grok {
         match => { "message" => "
 }
