--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -18,6 +18,8 @@ filter {
 
   if [fields][appName] == "payment" {
       grok {
+        match => { "message" => "if [fields][appName] == "shipping" {
+      grok {
         match => { "message" => "
 }
 
