--- Auto-Git Commit ---

--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -18,7 +18,7 @@ filter {
 
   if [fields][appName] == "payment" {
       grok {
-        match => { "message" => "
+        match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:LOG_LEVEL}%{SPACE}in%{SPACE}%{WORD:APP_NAME}:%{GREEDYDATA:MESSAGE}
 }
 
 output {
