--- a/roles/logstash/files/logstash.conf
+++ b/roles/logstash/files/logstash.conf
@@ -17,10 +17,10 @@ filter {
   }
   if [fields][appName] == "payment" {
       grok {
-        match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:LOG_LEVEL}%{SPACE}in%{SPACE}%{WORD:APP_NAME}:%{GREEDYDATA:MESSAGE}"
+        match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:LOG_LEVEL}%{SPACE}in%{SPACE}%{WORD:APP_NAME}:%{GREEDYDATA:MESSAGE}" }
       }
     }
-  }
+}
 
 output {
   elasticsearch {
