--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -16,7 +16,7 @@ filebeat.inputs:
     multiline.match: after
 {% endif %}
 
-{% if is defined %}
+{% if COMPONENTis defined %}
 
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
