--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -18,6 +18,8 @@ filebeat.inputs:
 
 {% if COMPONENT == "payment" %}
 
+{% endif %}
+
 {% if OUTPUT_TO == "elasticsearch" %}
     json.keys_under_root: true
 setup.template.name: "{{COMPONENT}}"
