--- Auto-Git Commit ---

--- a/roles/common/templates/filebeat.yml
+++ b/roles/common/templates/filebeat.yml
@@ -17,7 +17,7 @@ filebeat.inputs:
 {% endif %}
 
 {% if COMPONENT == "payment" %}
-     include_stamp: 
+     include_stamp: []
 {% endif %}
 
 {% if OUTPUT_TO == "elasticsearch" %}
